# crucible

./: Cargo.toml
conduit/: Cargo.toml  README.md
conduit/src/: collector.rs  main.rs  registry.rs  render.rs  server.rs
deploy/observability/: README.md  docker-compose.yml  prometheus.yml
deploy/observability/grafana/dashboards/: crucible-downstairs.json
deploy/observability/grafana/provisioning/dashboards/: dashboards.yml
dsc/src/: main.rs
tools/bpftrace/: README.md  perf-downstairs-three.bt  perf-downstairs.bt
