[package]
name = "crucible-conduit"
version = "0.1.0"
license = "MPL-2.0"
edition = "2024"

[[bin]]
name = "crucible-conduit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dropshot.workspace = true
http.workspace = true
omicron-common.workspace = true
oximeter.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
tokio.workspace = true
uuid.workspace = true
crucible-common.workspace = true
crucible-workspace-hack.workspace = true
